# alexa-gemini-cloudrun

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  firebase.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: alexa.py  config.py  gemini.py  main.py  security.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  alexa-interaction-model.json
scripts/: setup-gcp.sh  setup-github-cicd.sh
tests/: test_alexa.py  test_main.py
