[project]
name = "alexa-gemini-skill"
version = "1.0.0"
description = "Private Alexa skill backend that proxies voice requests to Google Gemini, deployed on Cloud Run."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
